# telnet

./: .gitignore  Dockerfile  README.md  build_virtual_era5.py  colab_arco_era5_workflow.ipynb  colab_gpu_only_workflow.ipynb  colab_maranhao_workflow.ipynb  colab_ssh_setup.ipynb  compute_climate_indices.py  docker-compose.yml  download_era5_aws.py  download_maranhao_shapefile.py  download_preprocess_data.py  extract_maranhao.py  feature_pre_selection.py  generate_forecast.py  load_arco_era5.py  load_virtual_era5.py  prepare_local_data.py  pyproject.toml  run_maranhao_forecast.py  sync_to_drive.py  test.py  utils.py  verify_forecasts.py
config/: default.yaml
configs/: maranhao_bounds.txt
docker/: requirements.txt
docs/: COLAB_SSH_SETUP.md  LOCAL_COLAB_WORKFLOW.md
docs/plans/: 2026-01-16-colab-workflow-notebook.md  2026-01-16-maranhao-forecast-design.md  2026-01-16-maranhao-forecast.md  2026-01-16-virtual-era5-icechunk.md  2026-01-19-farm-weather-advisor-design.md
modules/: submodules.py
telnet/: __init__.py  cli.py  config.py  seas5.py
telnet/commands/: __init__.py  download.py  evaluate.py  forecast.py  train.py
